--- a/src/app/product-add/product-add.component.html
+++ b/src/app/product-add/product-add.component.html
@@ -9,7 +9,7 @@
         *ngIf="angForm.controls['ProductName'].invalid && (angForm.controls['ProductName'].dirty || angForm.controls['ProductName'].touched)"
         class="alert alert-danger">
         <div *ngIf="angForm.controls['ProductName'].errors?.required">
-          Product Name is required.
+          Product name is required
         </div>
       </div>
       <div class="form-group">
@@ -19,7 +19,7 @@
       </div>
       <div *ngIf="angForm.controls['ProductDescription'].invalid && (angForm.controls['ProductDescription'].dirty || angForm.controls['ProductDescription'].touched)" class="alert alert-danger">
         <div *ngIf="angForm.controls['ProductDescription'].errors?.required">
-          Product Description is required.
+          Product Description is required
         </div>
       </div>
       <div class="form-group">
@@ -28,7 +28,7 @@
       </div>
       <div *ngIf="angForm.controls['ProductPrice'].invalid && (angForm.controls['ProductPrice'].dirty || angForm.controls['ProductPrice'].touched)" class="alert alert-danger">
         <div *ngIf="angForm.controls['ProductPrice'].errors?.required">
-          Product Price is required.
+          Product price is required
         </div>
       </div>
       <div class="form-group">
